src/test/ui/pattern/usefulness/tuple-struct-nonexhaustive.stderr
error[E0004]: non-exhaustive patterns: `Foo(_, _)` not covered
  --> $DIR/tuple-struct-nonexhaustive.rs:5:11
   |
LL | struct Foo(isize, isize);
   | ------------------------- `Foo` defined here
...
LL |     match x {
   |           ^ pattern `Foo(_, _)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
